--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node ./src/server.js",
     "dev": "nodemon ./src/server.js",
     "migrate": "knex migrate:latest",
-    "seed": "npx knex seed:run"
+    "seed": "npx knex seed:run",
+    "test": "jest"
   },
   "author": "Matheus da Rocha Vieira",
   "license": "ISC",
@@ -23,6 +24,7 @@
     "sqlite3": "^5.1.4"
   },
   "devDependencies": {
+    "jest": "^29.5.0",
     "nodemon": "^2.0.21"
   }
 }
